Fix scroll modal, overflow text

--- a/style.scss
+++ b/style.scss
@@ -7,15 +7,12 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow-x: hidden !important;
+}
+
 body {
     flex-direction: column;
-    /* background: #8c0a5e; */
-    // background-color: #560a24;
-    // opacity: 1;
-    // background-image: linear-gradient(135deg, #6a0a48 25%, transparent 25%), linear-gradient(225deg, #6a0a48 25%, transparent 25%), linear-gradient(45deg, #6a0a48 25%, transparent 25%), linear-gradient(315deg, #6a0a48 25%, #560a24 25%);
-    // background-position: 150px 0, 150px 0, 0 0, 0 0;
-    // background-size: 150px 150px;
-    // background-repeat: repeat;
     background-image: url("./img/Mesa.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -116,11 +113,13 @@ body {
 
 .text-modal {
     font-size: 25px !important;
+    display: block;
 }
 
 .text-container {
     display: flex;
     align-items: center;
+    margin: auto;
     /* align vertical */
 }
 
