--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,12 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden !important;
+}
+
 body {
   flex-direction: column;
-  /* background: #8c0a5e; */
   background-image: url("./img/Mesa.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -117,11 +120,13 @@ body {
 
 .text-modal {
   font-size: 25px !important;
+  display: block;
 }
 
 .text-container {
   display: flex;
   align-items: center;
+  margin: auto;
   /* align vertical */
 }
 
